feat: chart folder
